# project-AtlasTeam01

./: .gitignore  README.md  address_book.py  address_book_old.py  book_serialization.py  command_handlers.py  decorators.py  main.py  pyproject.toml  requirements.txt
addressBook/: __init__.py  address_book.py  fields.py  handlers.py  menu.py  record.py  utils.py
data/: address_book.pkl  notes.pkl
helpers/: __init__.py  command_helpers.py
notes/: __init__.py  handlers.py  menu.py  notes_book.py
store/: __init__.py  address_book.pkl  notes.pkl  serializer.py
