[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-team-assistant"
version = "0.1.0"
description = "Educational assistant bot for contacts and notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"questionary==2.1.1",
	"tabulate==0.9.0",
	"phonenumbers==9.0.26",
	"email_validator==2.3.0"
]

[project.scripts]
atlas-assistant = "main:main"

[tool.setuptools]
packages = ["addressBook", "helpers", "notes", "store"]
py-modules = ["main", "decorators"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"